; ModuleID = '/home/carl/AnghaBench/freebsd/lib/geom/eli/extr_geom_eli.c_eli_genkey.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/geom/eli/extr_geom_eli.c_eli_genkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gctl_req = type { i32 }
%struct.g_eli_metadata = type { i32 }
%struct.hmac_ctx = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"nonewpassphrase\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"nopassphrase\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"keyfile\00", align 1
@.str.3 = private unnamed_addr constant [25 x i8] c"No key components given.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.gctl_req*, %struct.g_eli_metadata*, i8*, i32)* @eli_genkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @eli_genkey(%struct.gctl_req* %0, %struct.g_eli_metadata* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.gctl_req*, align 8
  %7 = alloca %struct.g_eli_metadata*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.hmac_ctx, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.gctl_req* %0, %struct.gctl_req** %6, align 8
  store %struct.g_eli_metadata* %1, %struct.g_eli_metadata** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load %struct.gctl_req*, %struct.gctl_req** %6, align 8
  %14 = load i32, i32* %9, align 4
  %15 = icmp ne i32 %14, 0
  %16 = zext i1 %15 to i64
  %17 = select i1 %15, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0)
  %18 = call i32 @gctl_get_int(%struct.gctl_req* %13, i8* %17)
  store i32 %18, i32* %11, align 4
  %19 = call i32 @g_eli_crypto_hmac_init(%struct.hmac_ctx* %10, i32* null, i32 0)
  %20 = load %struct.gctl_req*, %struct.gctl_req** %6, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @eli_genkey_files(%struct.gctl_req* %20, i32 %21, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), %struct.hmac_ctx* %10, i32* null, i32 0)
  store i32 %22, i32* %12, align 4
  %23 = load i32, i32* %12, align 4
  %24 = icmp eq i32 %23, -1
  br i1 %24, label %25, label %26

25:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %47

26:                                               ; preds = %4
  %27 = load i32, i32* %12, align 4
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %35

29:                                               ; preds = %26
  %30 = load i32, i32* %11, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %29
  %33 = load %struct.gctl_req*, %struct.gctl_req** %6, align 8
  %34 = call i32 @gctl_error(%struct.gctl_req* %33, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0))
  store i8* null, i8** %5, align 8
  br label %47

35:                                               ; preds = %29, %26
  br label %36

36:                                               ; preds = %35
  %37 = load %struct.gctl_req*, %struct.gctl_req** %6, align 8
  %38 = load %struct.g_eli_metadata*, %struct.g_eli_metadata** %7, align 8
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @eli_genkey_passphrase(%struct.gctl_req* %37, %struct.g_eli_metadata* %38, i32 %39, %struct.hmac_ctx* %10)
  %41 = icmp eq i32 %40, -1
  br i1 %41, label %42, label %43

42:                                               ; preds = %36
  store i8* null, i8** %5, align 8
  br label %47

43:                                               ; preds = %36
  %44 = load i8*, i8** %8, align 8
  %45 = call i32 @g_eli_crypto_hmac_final(%struct.hmac_ctx* %10, i8* %44, i32 0)
  %46 = load i8*, i8** %8, align 8
  store i8* %46, i8** %5, align 8
  br label %47

47:                                               ; preds = %43, %42, %32, %25
  %48 = load i8*, i8** %5, align 8
  ret i8* %48
}

declare dso_local i32 @gctl_get_int(%struct.gctl_req*, i8*) #1

declare dso_local i32 @g_eli_crypto_hmac_init(%struct.hmac_ctx*, i32*, i32) #1

declare dso_local i32 @eli_genkey_files(%struct.gctl_req*, i32, i8*, %struct.hmac_ctx*, i32*, i32) #1

declare dso_local i32 @gctl_error(%struct.gctl_req*, i8*) #1

declare dso_local i32 @eli_genkey_passphrase(%struct.gctl_req*, %struct.g_eli_metadata*, i32, %struct.hmac_ctx*) #1

declare dso_local i32 @g_eli_crypto_hmac_final(%struct.hmac_ctx*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
